--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,19 @@
 name: font_icon_to_flutter
-version: 0.0.1
+version: 0.1.0
 description: "Translate your CSS Font Icon to Dart for your Flutter Project."
-repository:
+repository: https://github.com/vmichalak/font_icon_to_flutter
+issue_tracker: https://github.com/vmichalak/font_icon_to_flutter/issues
+
+topics:
+  - cli
+  - font
+  - icon
 
 environment:
-  sdk: ^3.5.4
+  sdk: ">=3.0.0 <4.0.0"
+
+executables:
+  font_icon_to_flutter:
 
 dependencies:
   args: ^2.6.0
@@ -12,5 +21,5 @@ dependencies:
   path: ^1.9.1
 
 dev_dependencies:
-  test: ^1.25.13
+  test: ^1.25.14
   very_good_analysis: ^7.0.0
